implementando nivel de usuario

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,26 @@ dist.jar=${dist.dir}/TrabalhoFinalGiovannaFranco.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=lib/commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=lib/commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=lib/groovy-all-2.0.1.jar
+file.reference.jasperreports-5.6.0.jar=lib/jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\Giovanna\\Documents\\ADS\\4Modulo\\DSIS\\Docs\\jcalendar-1.4\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.xalan.jar=lib/xalan.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.JasperReport56.classpath}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.xalan.jar}
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.JasperReport56.classpath}
@@ -75,7 +87,7 @@ main.class=br.com.giovanna.trabalhoFinalGiovannaFranco.apresentacao.FormLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
